Add content padding and full-width breakout

--- a/src/pages/news/2023-12-05.md
+++ b/src/pages/news/2023-12-05.md
@@ -1,8 +1,6 @@
 ---
 title: First news post
-layout: ../../layouts/NewsPost.astro
+layout: ../../layouts/NewsPostLayout.astro
 ---
-
-# First news post
 
 No news is good news, but a first news post that works is better news.
