--- a/src/pages/news/2023-12-05_2.md
+++ b/src/pages/news/2023-12-05_2.md
@@ -1,8 +1,6 @@
 ---
 title: 2nd Post
-layout: ../../layouts/NewsPost.astro
+layout: ../../layouts/NewsPostLayout.astro
 ---
-
-# 2nd Post
 
 Two posts in one day, it's a good news day.
