Update post layout paths

--- a/src/pages/news/2023-12-05.md
+++ b/src/pages/news/2023-12-05.md
@@ -1,6 +1,6 @@
 ---
 title: First news post
-layout: ../../layouts/NewsPostLayout.astro
+layout: "@layouts/NewsPostLayout.astro"
 ---
 
 No news is good news, but a first news post that works is better news.
