--- a/src/pages/news/2023-12-05_2.md
+++ b/src/pages/news/2023-12-05_2.md
@@ -1,6 +1,6 @@
 ---
 title: 2nd Post
-layout: ../../layouts/NewsPostLayout.astro
+layout: "@layouts/NewsPostLayout.astro"
 ---
 
 Two posts in one day, it's a good news day.
