Add figure/caption support for images

--- a/src/content/posts/368.md
+++ b/src/content/posts/368.md
@@ -9,6 +9,6 @@ authors:
 
 Finally got Frogger sound working !!!
 
-There are many small differences between Scramble and Frogger boards - mainly address pin swaps, but there are a few hard to find ones. In Scramble one of the AY3-8910 sound chips uses bits 7,6,5 & 4 as inputs, but in Frogger it's bits 7,6, \*3\* & 4. "5" and "3" look really similar on the old hand drawn schematic.
+There are many small differences between Scramble and Frogger boards - mainly address pin swaps, but there are a few hard to find ones. In Scramble one of the AY3-8910 sound chips uses bits 7,6,5 & 4 as inputs, but in Frogger it's bits 7,6, ***3*** & 4. "5" and "3" look really similar on the old hand drawn schematic.
 
 I should have looked in the MAME driver more carefully, they found it :)
